# Canvas-Courses-Complete-Content-Downloader

./: Auto Canvas Course Downloader Script.ipynb  Auto Canvas Course Downloader.ipynb  Mac Users Version (1).ipynb  Mac Users Version (2) (1).ipynb  Mac Users Version Script.ipynb  Mac Users Version.ipynb  README.md  canvas_archive.py  pyproject.toml  requirements.txt
pypi_package/: README.md  __init__.py  downloader.py  downloader_mac.py  downloader_windows.py
tests/: test_canvas_archive.py
