[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-downloader"
version = "0.1.0"
description = "Download course files and module content from Canvas LMS for Mac and Windows users."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name="Rory G. Quinlan" }
]
keywords = ["canvas", "lms", "education", "course-downloader", "canvas-api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Utilities",
]

dependencies = [
    "requests",
    "tqdm",
    "beautifulsoup4",
    "html2text",
    "pdfkit",
]

[project.urls]
"Homepage" = "https://github.com/RoryQo/Canvas-Courses-Complete-Content-Downloader"
"Bug Tracker" = "https://github.com/RoryQo/Canvas-Courses-Complete-Content-Downloader/issues"
